--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ typing-extensions = ">=4.4.0,<5.0.0"
 arclet-alconna = "^1.8.23,!=1.8.27"
 arclet-alconna-tools = "^0.7.9"
 skia-python = ">=138.0"
+pypinyin = "^0.55.0"
 
 [tool.poetry.group.dev.dependencies]
 
